@@ -85,7 +85,7 @@ class KFSInputStream extends FSInputStream {
           if (statistics != null) {
             statistics.incrementBytesRead(1);
           }
-          return ((int) (b[0] & 0xff));
+          return b[0] & 0xff;
         }
         return -1;
     }
