@@ -23,6 +23,8 @@ import java.io.IOException;
  * Thrown when there is a fatal exception while using {@link S3FileSystem}.
  */
 public class S3FileSystemException extends IOException {
+  private static final long serialVersionUID = 1L;
+
   public S3FileSystemException(String message) {
     super(message);
   }
