@@ -22,6 +22,8 @@ package org.apache.hadoop.fs.s3;
  * in {@link S3FileSystem}.
  */
 public class VersionMismatchException extends S3FileSystemException {
+  private static final long serialVersionUID = 1L;
+
   public VersionMismatchException(String clientVersion, String dataVersion) {
     super("Version mismatch: client expects version " + clientVersion +
         ", but data has version " +
